--- a/FE/amsral/package.json
+++ b/FE/amsral/package.json
@@ -16,9 +16,12 @@
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.10.2",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
