--- a/FE/amsral/package.json
+++ b/FE/amsral/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.10.2",
+    "@mui/x-date-pickers": "^8.11.1",
     "@tailwindcss/vite": "^4.1.12",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
