--- a/FE/amsral/package.json
+++ b/FE/amsral/package.json
@@ -16,16 +16,19 @@
     "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.10.2",
-    "@mui/x-date-pickers": "^8.11.1",
+    "@mui/x-date-pickers": "^8.11.2",
     "@tailwindcss/vite": "^4.1.12",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
