--- a/FE/amsral/package.json
+++ b/FE/amsral/package.json
@@ -22,6 +22,8 @@
     "@mui/x-data-grid": "^8.10.2",
     "@mui/x-date-pickers": "^8.11.2",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
@@ -37,23 +39,23 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jsdom": "^25.0.1",
+    "msw": "^2.6.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
-    "vitest": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.5.2",
-    "jsdom": "^25.0.1",
-    "@vitest/coverage-v8": "^2.1.8",
-    "msw": "^2.6.4"
+    "vitest": "^2.1.8"
   }
 }
